added arduino sketch for communication with ros,2, updated controllers

--- a/robotic_arm_bringup/CMakeLists.txt
+++ b/robotic_arm_bringup/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.8)
-project(robotic_arm_firmware)
+project(robotic_arm_bringup)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -7,33 +7,12 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-find_package(ament_cmake_python REQUIRED)
-find_package(rclcpp REQUIRED)
-find_package(rclpy REQUIRED)
-find_package(std_msgs REQUIRED)
-find_package(rclcpp_lifecycle REQUIRED)
-
-add_executable(simple_lifecycle_node src/lifecycle_node.cpp)
-ament_target_dependencies(simple_lifecycle_node rclcpp rclcpp_lifecycle std_msgs)
-
-
-# 
-ament_python_install_package(${PROJECT_NAME})
-
-# 
 
 install(
-  PROGRAMS
-  ${PROJECT_NAME}/serial_transmitter.py
-  ${PROJECT_NAME}/serial_receiver.py
-  DESTINATION lib/${PROJECT_NAME}
-)
-
-install(
-  TARGETS
-  simple_lifecycle_node
-
-  DESTINATION lib/${PROJECT_NAME}
+  DIRECTORY
+    launch
+  DESTINATION
+    share/${PROJECT_NAME}
 )
 
 if(BUILD_TESTING)
