--- a/robotic_arm_controllers/package.xml
+++ b/robotic_arm_controllers/package.xml
@@ -9,10 +9,17 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
   
+  <depend>rclcpp</depend>
+  <depend>rclcpp_lifecycle</depend>
+  <depend>hardware_interface</depend>
+  <depend>pluginlib</depend>
+  <depend>libserial-dev</depend>
+
   <exec_depend>ros2launch</exec_depend>
   <exec_depend>xacro</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>controller_manager</exec_depend>
+
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
