--- a/robotic_arm_moveit/config/initial_positions.yaml
+++ b/robotic_arm_moveit/config/initial_positions.yaml
@@ -2,7 +2,7 @@
 
 initial_positions:
   base_waist_joint: 0
-  wasit_link1_joint: 0
   link1_link2_joint: 0
-  link2_gripper_base_joint: 0
+  link2_gipper_base_joint: 0
   right_gripper_joint: 0
+  waist_link1_joint: 0
