--- a/robotic_arm_moveit/config/moveit_controllers.yaml
+++ b/robotic_arm_moveit/config/moveit_controllers.yaml
@@ -1,20 +1,11 @@
 # MoveIt uses this configuration for controller management
+
 moveit_controller_manager: moveit_simple_controller_manager/MoveItSimpleControllerManager
 
 moveit_simple_controller_manager:
   controller_names:
-    - arm_controller
     - gripper_controller
-
-  arm_controller:
-    action_ns: follow_joint_trajectory
-    type: FollowJointTrajectory
-    default: true
-    joints:
-      - base_waist_joint
-      - waist_link1_joint
-      - link1_link2_joint
-      - link2_gripper_base_joint
+    - robotic_arm_controller
 
   gripper_controller:
     action_ns: follow_joint_trajectory
@@ -22,4 +13,16 @@ moveit_simple_controller_manager:
     default: true
     joints:
       - right_gripper_joint
-      - left_gripper_joint
+
+    default: true
+
+  robotic_arm_controller:
+    action_ns: follow_joint_trajectory
+    type: FollowJointTrajectory
+    default: true
+    joints:
+      - base_waist_joint
+      - waist_link1_joint
+      - link1_link2_joint
+      - link2_gipper_base_joint
+    default: true
