--- a/robotic_arm_moveit/package.xml
+++ b/robotic_arm_moveit/package.xml
@@ -3,15 +3,15 @@
 <package format="3">
   <name>robotic_arm_moveit</name>
   <version>0.0.0</version>
-  <description>TODO: Package description</description>
-  <maintainer email="newtonkaris45@gmail.com">newton</maintainer>
-  <license>TODO: License declaration</license>
-
-  <exec_depend>ros2launch</exec_depend>
-  <exec_depend>rviz</exec_depend>
-  <exec_depend>moveit_config_utils</exec_depend>
+  <description>robotic_arm MoveIt! 2 package</description>
+  <maintainer email="newtonkaris45@gmail.com">Newton Kariuki</maintainer>
+  <license>Apache 2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
+  
+  <exec_depend>ros2launch</exec_depend>
+  <exec_depend>rviz2</exec_depend>
+  <exec_depend>moveit_configs_utils</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
