--- a/robotic_arm_kinematics/package.xml
+++ b/robotic_arm_kinematics/package.xml
@@ -4,14 +4,10 @@
   <name>robotic_arm_kinematics</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="newtonkaris45@gmail.com">newtonjeri</maintainer>
+  <maintainer email="newtonkaris45@gmail.com">newton</maintainer>
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <depend>rclcpp</depend>
-  <depend>std_msgs</depend>
-  <depend>trajectory_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
