--- a/robotic_arm_msgs/CMakeLists.txt
+++ b/robotic_arm_msgs/CMakeLists.txt
@@ -7,10 +7,14 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(std_msgs REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 
 rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/JointAngles.msg"
+  "msg/ObjectInference.msg"
+  DEPENDENCIES std_msgs
+
 )
 
 ament_export_dependencies(rosidl_default_runtime)
