--- a/robotic_arm_kinematics/CMakeLists.txt
+++ b/robotic_arm_kinematics/CMakeLists.txt
@@ -7,9 +7,38 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
-# uncomment the following section in order to fill in
-# further dependencies manually.
-# find_package(<dependency> REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+find_package(rclcpp REQUIRED)
+find_package(rclpy REQUIRED)
+find_package(std_msgs REQUIRED)
+
+# Include cpp "include" directory
+include_directories(include)
+
+# Create c++ executables
+# add_executable(exec_name src/file.cpp src/file2.cpp)
+# ament_target_dependencies(exec_name rclcpp std_msgs)
+
+# install cpp executables
+# install(
+#   exec_name
+#   DEFINITION lib/${PROJECT_NAME}
+# )
+
+install(
+  DIRECTORY
+    ${PROJECT_NAME}
+  DESTINATION
+    share/${PROJECT_NAME}/
+)
+
+# install Python executables
+install(
+  PROGRAMS
+    ${PROJECT_NAME}/ik_service_server_node.py
+    ${PROJECT_NAME}/ik_service_client_node.py
+  DESTINATION lib/${PROJECT_NAME}
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
