--- a/robotic_arm_camera/package.xml
+++ b/robotic_arm_camera/package.xml
@@ -4,15 +4,17 @@
   <name>robotic_arm_camera</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
-  <maintainer email="newton@todo.todo">newton</maintainer>
+  <maintainer email="newtonkaris45@gmail.com">newton</maintainer>
   <license>TODO: License declaration</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <depend>rclpy</depend>
 
-  <test_depend>ament_lint_auto</test_depend>
-  <test_depend>ament_lint_common</test_depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
+  <test_depend>python3-pytest</test_depend>
 
   <export>
-    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
