--- a/robotic_arm_description/CMakeLists.txt
+++ b/robotic_arm_description/CMakeLists.txt
@@ -21,7 +21,7 @@ find_package(urdf REQUIRED)
 ################################################################################
 # Install
 ################################################################################
-install(DIRECTORY meshes urdf launch worlds
+install(DIRECTORY meshes urdf launch worlds rviz_configs
   DESTINATION share/${PROJECT_NAME}
 )
 
