--- a/robotic_arm_transforms/CMakeLists.txt
+++ b/robotic_arm_transforms/CMakeLists.txt
@@ -42,4 +42,9 @@ install(TARGETS
     DESTINATION lib/${PROJECT_NAME}
     )
 
+    install(
+    DIRECTORY launch
+    DESTINATION share/${PROJECT_NAME}/
+  )
+
 ament_package()
